# torch-densepose

./: .gitignore  README.md  setup.cfg
densepose/: __init__.py  extra_fpn_block.py  model.py  msra_resnet.py  roi_heads.py  rpn.py  transform.py  version.py
densepose/models/: densepose.py  extra_fpn_block.py  roi_heads.py
