[metadata]
name = torch-densepose
version = attr: densepose.VERSION
authors = ["Licht Takeuchi"]
description = DensePose implementation by PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Licht-T/torch-densepose
keywords = densepose, pytorch
license = Apache License 2.0
license_files = LICENSE
classifiers =
    Topic :: Scientific/Engineering :: Image Recognition
    OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
pythonrequire = >=3.7,4.0>
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    pillow
    torch
    torchvision
    numpy

[options.packages.find]
exclude =
    tests
